--- a/Test_SMILES.ipynb
+++ b/Test_SMILES.ipynb
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "DwuU7Rrp53Sw"
       },
@@ -646,6 +646,7 @@
         "  def forward(self, image, text_in_, max_len, beam=1): #just changed beam=1 and it runs so beam cannot be random number???  yeah it has to been factor of 676, which is 2 2 13 13 but original paper did not use beam search\n",
         "    image_feature = self.encoder(image)\n",
         "    top_n = list([list(i) for i in torch.tensor(text_in_).repeat(beam,1).detach().cpu().numpy()])\n",
+        "    print(top_n)\n",
         "    # top_n_conf = torch.tensor([1.] * beam).to(device) #we do not need this, we just need to track current best\n",
         "\n",
         "    for i in range(max_len):\n",
@@ -997,32 +998,50 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\".join([reversed_word_map[i] for i in gen(image, [[77]], len(text_in[0]), beam=1)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")\n"
+        "\"\".join([reversed_word_map[i] for i in gen(image, [[77]], len(text_in[0]), beam=4)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 53
         },
         "id": "cWEPHS892VP_",
-        "outputId": "43a845b0-1be7-4554-9df9-8be2b7c50c3f"
+        "outputId": "3395429f-3aea-41dd-8f0d-e3b164f560de"
       },
-      "execution_count": 28,
+      "execution_count": 37,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[77], [77], [77], [77]]\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'C=C=CCC=C6)C=O))NC#N'"
+              "'C=CC=CC=C6)SC6)C#)))'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 37
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\".join([reversed_word_map[i] for i in gen(image, [[77], [77], [77], [77]], len(text_in[0]), beam=1)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")\n"
+      ],
+      "metadata": {
+        "id": "ANheBUSg2zrj"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1178,7 +1197,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2T7VsUsGmwiSsVKej21R+",
+      "authorship_tag": "ABX9TyPPbp0CWCu++4Wh6MxAZEIc",
       "include_colab_link": true
     },
     "kernelspec": {
