what the fuck now one is correct

--- a/Test_SMILES.ipynb
+++ b/Test_SMILES.ipynb
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 76,
       "metadata": {
         "id": "DwuU7Rrp53Sw"
       },
@@ -651,7 +651,8 @@
         "\n",
         "    for i in range(max_len):\n",
         "      if beam == 1:\n",
-        "        padded_text, l = pad_pack(top_n)\n",
+        "        # now i did nothing but just print padded text and the result is correct wtf now not the smae wtf\n",
+        "        padded_text, l = pad_pack([top_n[0]])\n",
         "        padded_text = padded_text.to(device)\n",
         "        out = self.decoder(padded_text, image_feature, x_mask=triangle_mask(l).to(device))\n",
         "        out = out[0,-1,:]\n",
@@ -732,61 +733,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0ox3u4v-69bA",
-        "outputId": "3684e92c-1c27-444d-e45d-13624688c432"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Started\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "import wandb\n",
-        "print(\"Started\")\n",
-        "\n",
-        "optimizer = torch.optim.AdamW(\n",
-        "   model.parameters(),\n",
-        "   lr=0.0003)\n",
-        "\n",
-        "\n",
-        "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.99987)\n",
-        "\n",
-        "\n",
-        "loss_list = []\n",
-        "model.to(device)\n",
-        "\n",
-        "\n",
-        "def getitem(i):\n",
-        " imgs = []\n",
-        " ti = []\n",
-        " to = []\n",
-        " for i in range(i, i+BATCH_SIZE):\n",
-        "    index = i\n",
-        "    try:\n",
-        "      id = int(files[index].split(\"_\")[0])\n",
-        "    except:\n",
-        "      return\n",
-        "    try:\n",
-        "     img = np.array(Image.open(f\"./rendered/{files[index]}\")) #cannot read image? quota reached?\n",
-        "     imgs.append(img)\n",
-        "     ti.append([77] + Ys[id])\n",
-        "     to.append(Ys[id] + [78])\n",
-        "    except:\n",
-        "     pass\n",
-        " return torch.tensor(np.array(imgs), dtype=torch.float32), ti, to\n",
-        "\n",
-        "Test = True\n"
-      ]
+        "# playground\n"
+      ],
+      "metadata": {
+        "id": "d5sLxQ1j34pv"
+      }
     },
     {
       "cell_type": "code",
@@ -895,6 +848,63 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ox3u4v-69bA",
+        "outputId": "3684e92c-1c27-444d-e45d-13624688c432"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Started\n"
+          ]
+        }
+      ],
+      "source": [
+        "import wandb\n",
+        "print(\"Started\")\n",
+        "\n",
+        "optimizer = torch.optim.AdamW(\n",
+        "   model.parameters(),\n",
+        "   lr=0.0003)\n",
+        "\n",
+        "\n",
+        "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.99987)\n",
+        "\n",
+        "\n",
+        "loss_list = []\n",
+        "model.to(device)\n",
+        "\n",
+        "\n",
+        "def getitem(i):\n",
+        " imgs = []\n",
+        " ti = []\n",
+        " to = []\n",
+        " for i in range(i, i+BATCH_SIZE):\n",
+        "    index = i\n",
+        "    try:\n",
+        "      id = int(files[index].split(\"_\")[0])\n",
+        "    except:\n",
+        "      return\n",
+        "    try:\n",
+        "     img = np.array(Image.open(f\"./rendered/{files[index]}\")) #cannot read image? quota reached?\n",
+        "     imgs.append(img)\n",
+        "     ti.append([77] + Ys[id])\n",
+        "     to.append(Ys[id] + [78])\n",
+        "    except:\n",
+        "     pass\n",
+        " return torch.tensor(np.array(imgs), dtype=torch.float32), ti, to\n",
+        "\n",
+        "Test = True\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Test\n"
@@ -997,18 +1007,73 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SgLdmyZH4Cfw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "\"\".join([reversed_word_map[i] for i in gen(image, [[77]], len(text_in[0]), beam=4)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")\n"
+        "# playground"
+      ],
+      "metadata": {
+        "id": "UtIEMv8A4EJ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\".join([reversed_word_map[i] for i in gen(image, [[77]], len(text_in[0]), beam=1)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "id": "cWEPHS892VP_",
-        "outputId": "3395429f-3aea-41dd-8f0d-e3b164f560de"
+        "id": "ANheBUSg2zrj",
+        "outputId": "d688e234-e099-4c94-b050-c9fee7047b01"
       },
-      "execution_count": 37,
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[77]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'CC=CC=NC=C6C=O)CF)F'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\".join([reversed_word_map[i] for i in gen(image, [[77], [77], [77], [77]], len(text_in[0]), beam=1)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "MjlVHpvi2VYc",
+        "outputId": "a4383f7a-cdfa-45ad-dd9b-f3b486b76a0c"
+      },
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,63 +1086,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'C=CC=CC=C6)SC6)C#)))'"
+              "'CC=CC=NC=C6))))C9=NO'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 37
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\"\".join([reversed_word_map[i] for i in gen(image, [[77], [77], [77], [77]], len(text_in[0]), beam=1)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")\n"
-      ],
-      "metadata": {
-        "id": "ANheBUSg2zrj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\"\".join([reversed_word_map[i] for i in gen(image, text_in[:,:1], len(text_in[0]), beam=1)[0]]).replace(\"<end>\",\"\").replace(\"<start>\",\"\").replace(\"<pad>\",\"\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 90
-        },
-        "id": "MjlVHpvi2VYc",
-        "outputId": "89ff850f-3159-4c2b-d9f2-de559b080c26"
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-10-7ce0942fd5f1>:132: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-            "  top_n = list([list(i) for i in torch.tensor(text_in_).repeat(beam,1).detach().cpu().numpy()])\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'CC=O)CC=O)SCCNC=O)C'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 27
+          "execution_count": 78
         }
       ]
     },
@@ -1092,22 +1108,22 @@
           "height": 36
         },
         "id": "_1s3mn1u2PeA",
-        "outputId": "6d4e12eb-380d-4a6d-d146-b630072c03cf"
+        "outputId": "5e433c66-858b-4ebb-b7e5-d87f6cb1ac5d"
       },
-      "execution_count": 26,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'CC=O)CC=O)SCCNC=O)C'"
+              "'C=CC=NC=C6Br))))CF)F)F'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 79
         }
       ]
     },
@@ -1197,7 +1213,12 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPbp0CWCu++4Wh6MxAZEIc",
+      "collapsed_sections": [
+        "d5sLxQ1j34pv",
+        "_O0bIecf1Xj4",
+        "WPk21y_G1gC7"
+      ],
+      "authorship_tag": "ABX9TyNBS53PY5w7ZDypL/8MWqbN",
       "include_colab_link": true
     },
     "kernelspec": {
