fuck i think i know why it is not batch first that is why the -1 was at second dim and it has to be a factor of that number and this effects it how i thoght about this i just say it is def something in the decoder

--- a/Test_SMILES.ipynb
+++ b/Test_SMILES.ipynb
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 81,
       "metadata": {
         "id": "DwuU7Rrp53Sw"
       },
@@ -651,8 +651,9 @@
         "\n",
         "    for i in range(max_len):\n",
         "      if beam == 1:\n",
+        "        top_n = [top_n[0]]\n",
         "        # now i did nothing but just print padded text and the result is correct wtf now not the smae wtf\n",
-        "        padded_text, l = pad_pack([top_n[0]])\n",
+        "        padded_text, l = pad_pack(top_n)\n",
         "        padded_text = padded_text.to(device)\n",
         "        out = self.decoder(padded_text, image_feature, x_mask=triangle_mask(l).to(device))\n",
         "        out = out[0,-1,:]\n",
@@ -1034,9 +1035,9 @@
           "height": 53
         },
         "id": "ANheBUSg2zrj",
-        "outputId": "d688e234-e099-4c94-b050-c9fee7047b01"
+        "outputId": "55b35d1c-a68a-461d-dd02-c3c570d97826"
       },
-      "execution_count": 77,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,14 +1050,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'CC=CC=NC=C6C=O)CF)F'"
+              "'CC=CC=CC=C6))))C=NO'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 82
         }
       ]
     },
@@ -1071,9 +1072,9 @@
           "height": 53
         },
         "id": "MjlVHpvi2VYc",
-        "outputId": "a4383f7a-cdfa-45ad-dd9b-f3b486b76a0c"
+        "outputId": "5c3fbee7-1531-4c65-b500-f88fa6736227"
       },
-      "execution_count": 78,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -1086,14 +1087,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'CC=CC=NC=C6))))C9=NO'"
+              "'CC=CC=CC=C6))))C9=NO'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 83
         }
       ]
     },
@@ -1108,9 +1109,9 @@
           "height": 36
         },
         "id": "_1s3mn1u2PeA",
-        "outputId": "5e433c66-858b-4ebb-b7e5-d87f6cb1ac5d"
+        "outputId": "061446d2-8f7a-4b79-816c-77f3419f882a"
       },
-      "execution_count": 79,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1123,7 +1124,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 84
         }
       ]
     },
@@ -1218,7 +1219,7 @@
         "_O0bIecf1Xj4",
         "WPk21y_G1gC7"
       ],
-      "authorship_tag": "ABX9TyNBS53PY5w7ZDypL/8MWqbN",
+      "authorship_tag": "ABX9TyNOjGdjPUXXjYZoc2GxSrdv",
       "include_colab_link": true
     },
     "kernelspec": {
