--- a/CLIP.ipynb
+++ b/CLIP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUHgpYzkS9yGeYSGxdfCpD",
+      "authorship_tag": "ABX9TyNxQeywxilHSo/MCO9t9QAa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,7 +334,7 @@
       "cell_type": "code",
       "source": [
         "CEL = torch.nn.CrossEntropyLoss()\n",
-        "class ComtrastLearning(torch.nn.Module):\n",
+        "class CL(torch.nn.Module):\n",
         "  def __init__(self, image_encoder, smiles_encoder):\n",
         "    super().__init__()\n",
         "    self.image_encoder = image_encoder\n",
@@ -357,38 +357,101 @@
       "metadata": {
         "id": "dIS65qvSEbtn"
       },
-      "execution_count": 80,
+      "execution_count": 95,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "n = 2\n",
-        "a = torch.tensor([[1.,2.,3.],[2,5,6]])\n",
-        "b = torch.tensor([[2,5,6],[1.,2.,3.]])\n",
-        "a = torch.broadcast_to(a, (n, n, -1))\n",
-        "b = torch.broadcast_to(b, (n, n, -1)).permute(1,0,2)\n",
-        "torch.nn.functional.cosine_similarity(a, b, dim=-1)\n"
+        "reversed_mapping[29] = \"\"\n",
+        "reversed_mapping[30] = \"\""
+      ],
+      "metadata": {
+        "id": "I9S-SHBAOhRu"
+      },
+      "execution_count": 113,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = CL(image_encoder, smiles_encoder)\n",
+        "optimizer = torch.optim.AdamW(model.parameters(), lr=0.0003)\n",
+        "\n",
+        "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.99987)\n",
+        "\n",
+        "for EPOCH in range(30):\n",
+        "  n = 5\n",
+        "  for i in range(0, len(smiles_arr), n):\n",
+        "    images_list = []\n",
+        "    smiles_list = []\n",
+        "    maxlen = 0\n",
+        "    for j in range(n):\n",
+        "        image = deepsmiles_to_img(\"\".join([reversed_mapping[_] for _ in smiles_arr[i+j]]))\n",
+        "        image = torch.tensor(image).permute(2,0,1)\n",
+        "        images_list.append(image)\n",
+        "        smiles_list.append(smiles_arr[i+j])\n",
+        "        maxlen = max(maxlen, len(smiles_arr[i+j]))\n",
+        "    for j in range(n):\n",
+        "      smiles_list[j] += [30] * (maxlen - len(smiles_list[j]))\n",
+        "\n",
+        "    images_list = torch.stack(images_list).to(torch.float32)\n",
+        "    smiles_list = torch.tensor(smiles_list, dtype=torch.int16)\n",
+        "    print(images_list.shape)\n",
+        "    print(smiles_list.shape)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    logits = model(images_list, smiles_list)\n",
+        "\n",
+        "    labels = torch.arange(n)\n",
+        "    loss_i = CEL(logits, labels)\n",
+        "    loss_t = CEL(logits.T, labels)\n",
+        "    loss = (loss_i + loss_t)/2\n",
+        "    loss.backward()\n",
+        "    optimizer.step()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GaVeEiiUJr6k",
-        "outputId": "d40143ad-65f3-4170-adbf-765bece7d939"
+        "outputId": "4a1af8d6-5929-4d27-e480-bbc452c67790"
       },
-      "execution_count": 79,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([5, 3, 400, 400])\n",
+            "torch.Size([5, 24])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor(_).unsqueeze(0).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fWXs7yMHNYDj",
+        "outputId": "f3c93e52-f594-4846-c056-852ab65cfaa8"
+      },
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[0.9945, 1.0000],\n",
-              "        [1.0000, 0.9945]])"
+              "torch.Size([1, 400, 400, 3])"
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 93
         }
       ]
     }
