--- a/ITM.ipynb
+++ b/ITM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMVax8+re87w4ce3NzXg51J",
+      "authorship_tag": "ABX9TyOTLJiwz9+lL1VkcTaIxujR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1099,7 +1099,12 @@
         "    self.modal = torch.nn.Embedding(2, 768)\n",
         "    self.i_begin = torch.nn.Embedding(1, 768)\n",
         "    self.t_begin = torch.nn.Embedding(1, 768)\n",
-        "\n",
+        "    self.fusion = torch.nn.Sequential(\n",
+        "        torch.nn.TransformerEncoderLayer(d_model=768, nhead=8, dim_feedforward=512, dropout=0.1),\n",
+        "        torch.nn.TransformerEncoderLayer(d_model=768, nhead=8, dim_feedforward=512, dropout=0.1),\n",
+        "        torch.nn.TransformerEncoderLayer(d_model=768, nhead=8, dim_feedforward=512, dropout=0.1),\n",
+        "        torch.nn.TransformerEncoderLayer(d_model=768, nhead=8, dim_feedforward=512, dropout=0.1),\n",
+        "    )\n",
         "  def forward(self, image, smiles):\n",
         "    # print(self.i_begin(torch.tensor(0)).unsqueeze(0).unsqueeze(0).repeat(image.shape[0],1,1).shape)\n",
         "    image_embedding = self.image_encoder(image)\n",
@@ -1111,7 +1116,9 @@
         "    m_t = self.modal(torch.ones(smiles_embedding.shape[1], dtype=torch.int32))\n",
         "    smiles_embedding = smiles_embedding + pos_txt + m_t\n",
         "    seq = torch.cat([self.i_begin(torch.tensor(0)).unsqueeze(0).unsqueeze(0).repeat(image.shape[0],1,1), image_embedding, self.i_begin(torch.tensor(0)).unsqueeze(0).unsqueeze(0).repeat(image.shape[0],1,1), smiles_embedding], dim=1)\n",
-        "    print(seq.shape)\n",
+        "    for i in self.fusion:\n",
+        "      seq = i(seq) #src_mask\n",
+        "    return seq\n",
         "CL(512)(torch.rand(2, 3, 400, 400), torch.zeros(2,128, dtype=torch.int32))"
       ],
       "metadata": {
@@ -1119,17 +1126,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eE41myMyfKzX",
-        "outputId": "0bb41e7d-809c-46ba-8186-2f6e610e50fb"
+        "outputId": "d7162cc8-90be-4e09-f7c2-47017517244e"
       },
-      "execution_count": 36,
+      "execution_count": 38,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([2, 1, 768])\n",
-            "torch.Size([2, 299, 768])\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0.1704, -0.4991, -0.4707,  ...,  1.0287,  0.5229, -0.1998],\n",
+              "         [-0.0517,  0.6494,  1.3448,  ..., -1.5602,  0.6680,  0.8599],\n",
+              "         [-0.2424,  0.6101,  0.4192,  ..., -0.6824,  0.1276, -0.2071],\n",
+              "         ...,\n",
+              "         [-0.4666,  0.7242,  0.8092,  ...,  0.1897,  2.0989,  0.0580],\n",
+              "         [ 0.5746,  0.1046,  1.2907,  ..., -1.1219,  1.7157,  0.2486],\n",
+              "         [ 0.9973, -0.4612, -0.1775,  ..., -0.4565,  0.2824, -1.1477]],\n",
+              "\n",
+              "        [[ 0.6530, -1.0336, -0.2791,  ...,  0.8369,  0.3837,  0.6387],\n",
+              "         [ 0.3309,  0.0338,  1.1746,  ..., -0.7856,  0.4644,  1.0637],\n",
+              "         [-0.5849,  0.5655,  1.1054,  ..., -0.0911,  0.7684, -0.3793],\n",
+              "         ...,\n",
+              "         [-0.3489,  0.8136,  1.2701,  ...,  0.3808,  1.9660, -0.0303],\n",
+              "         [ 0.2993,  0.3007,  0.9331,  ..., -1.3788,  1.8788, -0.0127],\n",
+              "         [ 1.1028, -0.6891,  0.6507,  ..., -0.4140,  0.5310, -0.6847]]],\n",
+              "       grad_fn=<NativeLayerNormBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
         }
       ]
     }
