--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -1075,13 +1075,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 109,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AzCea6KyjrDs",
-        "outputId": "ceb28acb-0b27-4ef1-ce09-2fcf9a5c21f9"
+        "outputId": "8532e503-b67b-4bf4-99bd-47d56de5f6a9"
       },
       "outputs": [
         {
@@ -1089,18 +1089,8 @@
           "name": "stdout",
           "text": [
             "\n",
-            "<start>CO<end><end><end><end><end><end><end><end><end>\n",
-            "<start>C(CO)O<end><end><end><end><end>\n",
-            "<start>CCO<end><end><end><end><end><end><end><end>\n",
-            "<start>CC(C=O)O<end><end><end>\n",
-            "<start>COCC=O<end><end><end><end><end>\n",
-            "<start>COC=O<end><end><end><end><end><end>\n",
-            "<start>CC(=O)O<end><end><end><end><end>\n",
-            "<start>CC1CO1<end><end><end><end><end><end>\n",
-            "<start>COC<end><end><end><end><end><end><end><end>\n",
-            "<start>CC(C(=O)O)O<end>\n",
-            "tensor([0.2125, 0.1785, 0.0768, 0.0703, 0.0673, 0.0367, 0.0360, 0.0348, 0.0198,\n",
-            "        0.0127], device='cuda:0')\n"
+            "<start>C(N)O<end>\n",
+            "tensor([0.3243], device='cuda:0')\n"
           ]
         }
       ],
@@ -1160,16 +1150,27 @@
         "      return top_n, top_n_p\n",
         "mod = mod.eval()\n",
         "gen = SMILESGenerator(mod.encoder, mod.decoder) #fucking yeah why when I test using val it is wrong did not refresh, I fucking said how is that possible, so all the tuning is not usful\n",
-        "img1 = torch.tensor(np.array(Image.open(\"c.jpg\").convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
+        "img1 = torch.tensor(np.array(Image.open(\"2.jpg\").convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
         "# img2 = torch.tensor(np.array(Image.open(\"w.jpg\").convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
         "# img3 = torch.tensor(np.array(Image.open(\"e.jpg\").convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
         "gen = gen.train(False) #forgot gen=\n",
-        "res = gen.forward([img1], [[77]], 100, 10)# got the right answer without beam but with beam it is not correct\n",
+        "res = gen.forward([img1], [[77]], 100, 1)# got the right answer without beam but with beam it is not correct\n",
         "print()\n",
         "for i in res[0]:\n",
         "  print(converter.decode(\"\".join([reversed_word_map_[i] for i in i.numpy()])))\n",
         "print(torch.exp(res[1]))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "summary: it was not working because always training = False,\n",
+        "but why then after looping whole thing still not working\n",
+        "unfreeze more layers"
+      ],
+      "metadata": {
+        "id": "d6WxuvktSj0D"
+      }
     },
     {
       "cell_type": "code",
@@ -2235,7 +2236,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1ZKySVPazmI9T_1qaNKM5j4nhBMoENArm",
-      "authorship_tag": "ABX9TyPNvFSxukQ4tiesglCHwiV1",
+      "authorship_tag": "ABX9TyMf6kRTMg3KQ8wjIGfT3OFQ",
       "include_colab_link": true
     },
     "kernelspec": {
