--- a/finetune.ipynb
+++ b/finetune.ipynb
@@ -1117,13 +1117,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AzCea6KyjrDs",
-        "outputId": "5d7b9661-e7a7-4816-8393-ddd7f883b4f6"
+        "outputId": "7e29996f-69ae-4c2d-f580-dfb545fde090"
       },
       "outputs": [
         {
@@ -1131,18 +1131,9 @@
           "name": "stdout",
           "text": [
             "\n",
-            "<start>C2=CC1=CC=CC=C1C=C2<end><end>\n",
-            "<start>C1=CC=CC=C1<end><end><end><end><end><end><end><end><end><end><end>\n",
-            "<start>C1=CC2=C(C=C1)C=CC=C2<end><end>\n",
-            "<start>C2=CC=C1C=CC=CC1=C2<end><end>\n",
-            "<start>2C=CC1=CC=CC=C1C2<end><end><end><end>\n",
-            "<start>C1=CC=C2C(=C1)C=CC=C2<end><end><end>\n",
-            "<start>C2=CC1=CC=CC=C1C2<end><end><end><end><end><end>\n",
-            "<start>CC1=CC=CC=C1<end><end><end><end><end><end><end><end><end><end>\n",
-            "<start>C1=CC=C(C=C1)C=C<end><end><end><end><end><end>\n",
-            "<start>C=C2C=CC1=CC=CC=C1C2<end>\n",
-            "tensor([0.1935, 0.1931, 0.1191, 0.0908, 0.0515, 0.0401, 0.0200, 0.0194, 0.0161,\n",
-            "        0.0087], device='cuda:0')\n"
+            "<start>C2=CC1=CC=CC=C1C=C2<end>\n",
+            "<start>C1=CC2=C(C=C1)C=CC=C2<end>\n",
+            "tensor([0.1935, 0.1191], device='cuda:0')\n"
           ]
         }
       ],
@@ -1155,7 +1146,7 @@
         "    self.encoder = encoder\n",
         "    self.decoder = decoder\n",
         "\n",
-        "  def forward(self, images, text_in_, max_len, beam): #just changed beam=1 and it runs so beam cannot be random number???  yeah it has to been factor of 676, which is 2 2 13 13 but original paper did not use beam search\n",
+        "  def forward(self, images, text_in_, max_len, beam, r=0.05): #just changed beam=1 and it runs so beam cannot be random number???  yeah it has to been factor of 676, which is 2 2 13 13 but original paper did not use beam search\n",
         "    with torch.no_grad():\n",
         "      image_feature = []\n",
         "      for i in images:\n",
@@ -1184,7 +1175,7 @@
         "              out[j][78]=1\n",
         "              reward[j]=(0.)\n",
         "            else:\n",
-        "              reward[j]=(0.05)\n",
+        "              reward[j]=(r)\n",
         "        top_n_p+=reward.to(device)\n",
         "        tmp_n = top_n_p.repeat((79,1)).T+torch.log(out)\n",
         "        x, y = top_k_2d(tmp_n, beam)\n",
@@ -1210,7 +1201,7 @@
         "# img2 = torch.tensor(np.array(Image.open(\"w.jpg\").convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
         "# img3 = torch.tensor(np.array(Image.open(\"e.jpg\").convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
         "gen = gen.train(False) #forgot gen=\n",
-        "res = gen.forward([img1], [[77]], 100, 10)# got the right answer without beam but with beam it is not correct chouwei xuyao xiangbanfa zhengzui changxulie youhao\n",
+        "res = gen.forward([img1], [[77]], 100, 2)# got the right answer without beam but with beam it is not correct chouwei xuyao xiangbanfa zhengzui changxulie youhao\n",
         "print()#duzikouke xianzxai\n",
         "for i in res[0]:\n",
         "  print(converter.decode(\"\".join([reversed_word_map_[i] for i in i.numpy()])))\n",
@@ -1383,50 +1374,6 @@
     {
       "cell_type": "code",
       "source": [
-        "mytest_ans = pd.read_csv(\"mytest_ans.csv\")"
-      ],
-      "metadata": {
-        "id": "rnX_YmSBZMbH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "w4PiXe53dgcz"
-      },
-      "outputs": [],
-      "source": [
-        "print(\"\\n\".join(list(set([i.split(\"_\")[0] for i in os.listdir(\"test\")]))))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "_yPxp2PofO9F"
-      },
-      "outputs": [],
-      "source": [
-        "print(myeval(\"2.jpg\"))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "CT9Q3Atvlg3M"
-      },
-      "outputs": [],
-      "source": [
-        "ans = {11203:\"CC(=C)Cl\", 286:\"C(C(=O)O)ON\", 6562: \"CC(=C)C=O\", 6587:\"CC[N+](=O)[O-]\"}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def myeval(img_paths, beam):\n",
         "  global gen\n",
         "  if type(img_paths)!=list:\n",
@@ -1444,7 +1391,7 @@
       "metadata": {
         "id": "q7TJJLdKadx1"
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -2357,7 +2304,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1ZKySVPazmI9T_1qaNKM5j4nhBMoENArm",
-      "authorship_tag": "ABX9TyO71RCdm5R3mElnqGuoGE6/",
+      "authorship_tag": "ABX9TyMSGRo/kyYmonx2AJPg+PGJ",
       "include_colab_link": true
     },
     "kernelspec": {
