--- a/thesis_test.ipynb
+++ b/thesis_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1IwXvttkcGcM7EwY_GivBMJgZjx6_xkSC",
-      "authorship_tag": "ABX9TyOx5fdDNhbVqAU8DexgDvE9",
+      "authorship_tag": "ABX9TyMzQrm/MXyEMOLggF2ociHa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,30 @@
         "id": "HfdigPw-67wg"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip images.zip"
+      ],
+      "metadata": {
+        "id": "gD6h4I_sC8c7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir -p images\n",
+        "!mv *.png images\n",
+        "!mv *.webp images"
+      ],
+      "metadata": {
+        "id": "yDec1Ha0DC_b"
+      },
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -96,6 +120,111 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "import os\n",
+        "import random\n",
+        "class SMILESGenerator(torch.nn.Module):\n",
+        "  def __init__(self, encoder, decoder):\n",
+        "    super().__init__()\n",
+        "    self.encoder = encoder\n",
+        "    self.decoder = decoder\n",
+        "\n",
+        "  def predict_next(self, i, out, beam, r):\n",
+        "    reward = torch.zeros(self.top_n_p.shape)\n",
+        "    if i>1:\n",
+        "      for j in range(beam):\n",
+        "        if self.top_n[j][-1]==78:\n",
+        "          out[j]=torch.zeros(79)\n",
+        "          out[j][78]=1\n",
+        "          reward[j]=(0.)\n",
+        "        else:\n",
+        "          reward[j]=(r)\n",
+        "    self.top_n_p+=reward.to(device)\n",
+        "    tmp_n = self.top_n_p.repeat((79,1)).T+torch.log(out)\n",
+        "    x, y = top_k_2d(tmp_n, beam)\n",
+        "    new_top_n = []\n",
+        "    new_top_n_p = []\n",
+        "    for j in range(beam):\n",
+        "      new_top_n.append(torch.cat((self.top_n[x[j]], y[j].cpu().unsqueeze(-1))))\n",
+        "      new_top_n_p += [tmp_n[x[j], y[j]]]\n",
+        "    self.top_n = new_top_n\n",
+        "    self.top_n_p = torch.tensor(new_top_n_p).to(device)\n",
+        "\n",
+        "\n",
+        "  def forward(self, images, text_in_, max_len, beam, r=0.05): #just changed beam=1 and it runs so beam cannot be random number???  yeah it has to been factor of 676, which is 2 2 13 13 but original paper did not use beam search\n",
+        "    with torch.no_grad():\n",
+        "      image_feature = []\n",
+        "      for i in images:\n",
+        "        mem = self.decoder.encoder(self.decoder.encoder_dim(self.encoder(i)))\n",
+        "        mem = mem.repeat_interleave(beam, dim=0)\n",
+        "        image_feature.append(mem)\n",
+        "\n",
+        "\n",
+        "      self.top_n = torch.tensor(text_in_)\n",
+        "      self.top_n_p = torch.tensor([0.]).to(device)\n",
+        "      for i in range(max_len):\n",
+        "        padded_text , l = pad_pack(self.top_n)\n",
+        "        padded_text = padded_text.to(device)\n",
+        "        out = []\n",
+        "        for i in range(len(images)):\n",
+        "          out.append(torch.nn.functional.softmax(self.decoder.decoder(padded_text, image_feature[i], x_mask=triangle_mask(l).to(device))[:,-1,:].squeeze(dim=1), dim=1))\n",
+        "        out = torch.mean(torch.stack(out), dim=0)\n",
+        "        self.predict_next(i, out, beam, r)\n",
+        "        count = 0\n",
+        "        for i in self.top_n:\n",
+        "          if 78 in i:\n",
+        "            count+=1\n",
+        "        if count==beam:\n",
+        "          return self.top_n, self.top_n_p\n",
+        "      return self.top_n, self.top_n_p\n",
+        "\n",
+        "val_cids = [286]#, 6587, 6562, 11203]\n",
+        "val_names = [i for i in os.listdir(\"./images\") if int(i.split(\"_\")[0]) in val_cids]\n",
+        "\n",
+        "\n",
+        "mod = mod.eval()\n",
+        "gen = SMILESGenerator(mod.encoder, mod.decoder)\n",
+        "img1 = torch.tensor(np.array(Image.open(\"images/\"+random.choice(val_names)).convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
+        "gen = gen.train(False) #forgot gen=\n",
+        "res = gen.forward([img1], [[77]], 100, 10, 0)\n",
+        "print()\n",
+        "for i in res[0]:\n",
+        "  print(converter.decode(\"\".join([reversed_word_map_[i] for i in i.numpy()])))\n",
+        "print(torch.exp(res[1]))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9JTYjFoi-Ib_",
+        "outputId": "654b6dc3-89a3-470b-9df7-b3c4032b8d77"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "<start>C(C(C(=O)[O-])O)ON<end>\n",
+            "<start>C(C(C(=O)O)O)ON<end><end><end><end>\n",
+            "<start>C(C(=O)O)ON<end><end><end><end><end><end><end><end>\n",
+            "<start>C(C(C(=O)O)O)ON<end><end><end>\n",
+            "<start>C(C(C(=O)[O-])N)ON<end>\n",
+            "<start>C(C(C(=O)O)ON)ON<end><end>\n",
+            "<start>C(C(C(=O)O)O)ON<end><end(>)N\n",
+            "<start>C(C(=O)O)ON<end><e(nd>)O<end><end>\n",
+            "<start>C(C(C(=O)O)O)ON<end><end>\n",
+            "<start>C(C(=O)O)ON<end><end><end><end><end><end><end>\n",
+            "tensor([0.1834, 0.1043, 0.0456, 0.0261, 0.0201, 0.0196, 0.0129, 0.0104, 0.0088,\n",
+            "        0.0086])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "t = 1\n",
         "import deepsmiles\n",
         "from PIL import Image\n",
@@ -137,99 +266,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "class SMILESGenerator(torch.nn.Module):\n",
-        "  def __init__(self, encoder, decoder):\n",
-        "    super().__init__()\n",
-        "    self.encoder = encoder\n",
-        "    self.decoder = decoder\n",
-        "\n",
-        "  def predict_next(self, image_embeding, text_in_):\n",
-        "    pass\n",
-        "\n",
-        "  def forward(self, images, text_in_, max_len, beam, r=0.05): #just changed beam=1 and it runs so beam cannot be random number???  yeah it has to been factor of 676, which is 2 2 13 13 but original paper did not use beam search\n",
-        "    with torch.no_grad():\n",
-        "      image_feature = []\n",
-        "      for i in images:\n",
-        "        image_feature.append(self.encoder(i))\n",
-        "      image_feature = torch.stack(image_feature)\n",
-        "      image_feature = image_feature.squeeze(1)\n",
-        "      mem = gen.decoder.encoder(gen.decoder.encoder_dim(image_feature))\n",
-        "      # mem = torch.mean(mem, dim=0)\n",
-        "      # mem = mem.unsqueeze(0).repeat_interleave(beam, dim=0)\n",
-        "      mem = mem.repeat_interleave(beam, dim=0)\n",
-        "      top_n = torch.tensor(text_in_)\n",
-        "      top_n_p = torch.tensor([0.]).to(device)\n",
-        "      for i in range(max_len):\n",
-        "        padded_text, l = pad_pack(top_n)\n",
-        "        padded_text = padded_text.to(device)\n",
-        "        out = torch.nn.functional.softmax(self.decoder.decoder(padded_text, mem, x_mask=triangle_mask(l).to(device))[:,-1,:].squeeze(dim=1), dim=1)\n",
-        "        reward = torch.zeros(top_n_p.shape)\n",
-        "        if i>1:\n",
-        "          for j in range(beam):\n",
-        "            if top_n[j][-1]==78:\n",
-        "              out[j]=torch.zeros(79)\n",
-        "              out[j][78]=1\n",
-        "              reward[j]=(0.)\n",
-        "            else:\n",
-        "              reward[j]=(r)\n",
-        "        top_n_p+=reward.to(device)\n",
-        "        tmp_n = top_n_p.repeat((79,1)).T+torch.log(out)\n",
-        "        x, y = top_k_2d(tmp_n, beam)\n",
-        "        new_top_n = []\n",
-        "        new_top_n_p = []\n",
-        "        for j in range(beam):\n",
-        "          new_top_n.append(torch.cat((top_n[x[j]], y[j].cpu().unsqueeze(-1))))\n",
-        "          new_top_n_p += [tmp_n[x[j], y[j]]]\n",
-        "        top_n = new_top_n\n",
-        "        top_n_p = torch.tensor(new_top_n_p).to(device)\n",
-        "        count = 0\n",
-        "        for i in top_n:\n",
-        "          if 78 in i:\n",
-        "            count+=1\n",
-        "        if count==beam:\n",
-        "          return top_n, top_n_p\n",
-        "      return top_n, top_n_p\n",
-        "mod = mod.eval()\n",
-        "gen = SMILESGenerator(mod.encoder, mod.decoder)\n",
-        "img1 = torch.tensor(np.array(Image.open(\"111.png\").convert(\"RGB\").resize((400,400)))).unsqueeze(0).permute(0,3,1,2).to(device).to(torch.float32)\n",
-        "gen = gen.train(False) #forgot gen=\n",
-        "res = gen.forward([img1], [[77]], 100, 10, 0)\n",
-        "print()\n",
-        "for i in res[0]:\n",
-        "  print(converter.decode(\"\".join([reversed_word_map_[i] for i in i.numpy()])))\n",
-        "print(torch.exp(res[1]))"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9JTYjFoi-Ib_",
-        "outputId": "b4bc1807-f812-4953-ee92-2188ad999ebe"
+        "id": "MEZJ3GDODJM0"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "<start>COCCN1CC1<end><end><end><end><end>\n",
-            "<start>COCN1CC1<end><end><end><end><end><end>\n",
-            "<start>COCN1CCC1<end><end><end><end><end>\n",
-            "<start>COCN1CCNC1<end><end><end><end>\n",
-            "<start>COCCN1CCC1<end><end><end><end>\n",
-            "<start>COCN1C=CNC1<end><end><end>\n",
-            "<start>COCN1C=NC1<end><end><end><end>\n",
-            "<start>COCCN1C=CNC1<end><end>\n",
-            "<start>COCCN1C=CC1<end><end><end>\n",
-            "<start>COCCN1C=CN=C1<end>\n",
-            "tensor([0.1362, 0.1031, 0.0239, 0.0212, 0.0210, 0.0205, 0.0193, 0.0158, 0.0139,\n",
-            "        0.0095])\n"
-          ]
-        }
-      ]
+      "execution_count": 30,
+      "outputs": []
     }
   ]
 }
