--- a/thesis_test.ipynb
+++ b/thesis_test.ipynb
@@ -2109,13 +2109,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 138,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9JTYjFoi-Ib_",
-        "outputId": "9e3d4192-0fb8-451f-ef32-f7191fb89f37"
+        "outputId": "05572e2b-5fb9-4850-ab6d-c003a361e39e"
       },
       "outputs": [
         {
@@ -2124,18 +2124,18 @@
           "text": [
             "6562_2138605173649507.png\n",
             "\n",
-            "<start><end><end><end><end><end><end><end><end><end><end>\n",
-            "<start>CC(=C)C=O<end><end>\n",
-            "<start>BC(=C)C=O<end><end>\n",
-            "<start>NC(=C)C=O<end><end>\n",
-            "<start>OC(=C)C=O<end><end>\n",
-            "<start(>)C(=C)C=O<end><end>\n",
-            "<star1t>1C(=C)C=O<end><end>\n",
-            "<st1art>1C(=C)C=O<end><end>\n",
-            "<start>=C(C)C=O<end><end><end>\n",
-            "<start>=CC(=C)C=O<end>\n",
-            "tensor([1.0000, 0.9120, 0.8848, 0.8594, 0.8590, 0.7687, 0.5898, 0.5895, 0.4736,\n",
-            "        0.3534])\n"
+            "<start>CC(=C)C=O<end><end><end><end><end>\n",
+            "<start>C=C(C)C=O<end><end><end><end><end>\n",
+            "<start>CC(C)C=O<end><end><end><end><end><end>\n",
+            "<start>CC(=C)CC=O<end><end><end><end>\n",
+            "<start>(C)C(=C)C=O<end><end><end><end>\n",
+            "<start>C=C(C=O)C<end><end><end><end>\n",
+            "<start>CC(C)(C)C=O<end><end><end><end>\n",
+            "<start>CC=C(C)C=O<end><end><end><end>\n",
+            "<start>CC(=C)C(=O)<end><end><end><end>\n",
+            "<start>C(C(=C)C=O)C<end>\n",
+            "tensor([9.0968e-01, 4.2394e-02, 2.3079e-02, 3.3235e-03, 1.8671e-03, 1.0043e-03,\n",
+            "        8.3787e-04, 7.7395e-04, 7.3972e-04, 2.7571e-04])\n"
           ]
         }
       ],
@@ -2178,7 +2178,8 @@
         "    new_top_n = []\n",
         "    new_top_n_p = []\n",
         "    if i==0:\n",
-        "      factor = torch.zeros(beam)*(1/(1**alpha))\n",
+        "      factor = torch.ones(beam)*(1/(1**alpha))\n",
+        "      # factor = torch.zeros(beam)*(1/(1**alpha))\n",
         "    for j in range(beam):\n",
         "      new_top_n.append(torch.cat((self.top_n[x[j]], y[j].cpu().unsqueeze(-1))))\n",
         "      new_top_n_p += [tmp_n[x[j], y[j]]/((1/(factor[j]**alpha)))]#return to befpre L\n",
@@ -3519,7 +3520,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1IwXvttkcGcM7EwY_GivBMJgZjx6_xkSC",
-      "authorship_tag": "ABX9TyPfmn1qkNF+psNMbwxqJZ3/",
+      "authorship_tag": "ABX9TyOIpsq9rlmg891WLMSEL+e3",
       "include_colab_link": true
     },
     "kernelspec": {
